--- a/templates/emails/notification_accept_solicitation_email.html
+++ b/templates/emails/notification_accept_solicitation_email.html
@@ -148,8 +148,7 @@
                                     style="border-radius: 6px;background-color: #1572e8;">
                                     <tr>
                                         <td align="left" valign="top" class="bodyContent" style="line-height: 150%;font-family: Helvetica;font-size: 14px;color: #ffffff;padding: 20px;">
-                                            <h2 style="font-size: 22px;line-height: 28px;margin: 0 0 12px 0;">Sua
-                                                doação foi solicitada</h2>
+                                            <h2 style="font-size: 22px;line-height: 28px;margin: 0 0 12px 0;">Sua solicitação foi aceita</h2>
                                             <br>
                                             <div>
                                                 <p style="padding: 0 0 10px 0;">
